--- a/index.html
+++ b/index.html
@@ -4,121 +4,142 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style_index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous">
+    </script>
+    <script src="./scripts/index.js"></script>
     <title>Document</title>
 </head>
-<body>
-    <h1>REPORTE DE BALANCE HIDRICO - BALANCE PERITONIAL</h1>
-    <div id="info-paciente">
-        <table>
+<body style="--bs-body-bg: #a7c2eb;">
+    <h2 class="text-wrap text-center">REPORTE DE BALANCE HIDRICO BALANCE PERITONIAL</h2>
+    <!-- <form id="formulario"> -->
+    <div class="info-paciente">
+        <table class="info-paciente-tabla">
             <tr>
                 <td>PACIENTE</td>
-                <td><input type="text" placeholder="Nombre"></td>
-            </tr>
-            <tr>
+                <td><input id="nombre" class="form-control input" type="text" placeholder="Nombre Completo" required></td>
                 <td>FECHA</td>
-                <td><input type="datetime-local" placeholder="Nombre"></td>
+                <td><input class="form-control input" value="" id="fecha" type="datetime-local" required></td>
             </tr>
             <tr>
                 <td>SISTEMA</td>
-                <td><select name="Tipo Sistema" id="">
+                <td><select class="form-select input" name="Tipo Sistema" id="sistema">
+                    <option value="" selected hidden>Elija un sistema</option>
                     <option value="1">Baxter</option>
                     <option value="2">Fresenius Medical Care</option>
                 </select></td>
-            </tr>
-            <tr>
                 <td>P/A</td>
-                <td><input type="text" placeholder="Nombre"></td>
+                <td><input class="form-control input" type="text" placeholder="Presión Arterial" required></td>
             </tr>
         </table>
     </div>
-    <div id="data">
-        <table border="1">
-            <tr>
-                <td rowspan="2">Recambio</td>
-                <td colspan="2">Fase I</td>
-                <td colspan="2">Fase II</td>
-                <td rowspan="2">Balance</td>
-            </tr>
-            <tr>
-                <td>CONSENTRACIÓN</td>
-                <td>INFUSIÓN</td>
-                <td>DRENAJE</td>
-                <td>CUALIDAD</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td><select name="" id="">
-                    <option value="0.0125">1.25%</option>
-                    <option value="0.025">2.50%</option>
-                    <option value="0.075">7.5%</option>
-                </select></td>
-                <td>2000 ml</td>
-                <td><input id="DRENAJE1" type="number"></td>
-                <td><select name="" id="">
-                    <option value="1">Claro</option>
-                    <option value="2">Turbio</option>
-                </select></td>
-                <td id="TOTAL_BALANCE1"></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td><select name="" id="">
-                    <option value="0.0125">1.25%</option>
-                    <option value="0.025">2.50%</option>
-                    <option value="0.075">7.5%</option>
-                </select></td>
-                <td>2000 ml</td>
-                <td><input id="DRENAJE2" type="number"></td>
-                <td><select name="" id="">
-                    <option value="1">Claro</option>
-                    <option value="2">Turbio</option>
-                </select></td>
-                <td id="TOTAL_BALANCE2"></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td><select name="" id="">
-                    <option value="0.0125">1.25%</option>
-                    <option value="0.025">2.50%</option>
-                    <option value="0.075">7.5%</option>
-                </select></td>
-                <td>2000 ml</td>
-                <td><input id="DRENAJE3" type="number"></td>
-                <td><select name="" id="">
-                    <option value="1">Claro</option>
-                    <option value="2">Turbio</option>
-                </select></td>
-                <td id="TOTAL_BALANCE3"></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td><select name="" id="">
-                    <option value="0.0125">1.25%</option>
-                    <option value="0.025">2.50%</option>
-                    <option value="0.075">7.5%</option>
-                </select></td>
-                <td>2000 ml</td>
-                <td><input id="DRENAJE4" type="number"></td>
-                <td><select name="" id="">
-                    <option value="1">Claro</option>
-                    <option value="2">Turbio</option>
-                </select></td>
-                <td id="TOTAL_BALANCE4"></td>
-            </tr>
-            <tr>
-                <td>Total</td>
-                <td></td>
-                <td id="TOTAL_INFUSION "></td>
-                <td id="TOTAL_DRENAJE"></td>
-                <td></td>
-                <td id="TOTAL_BALANCE_FINAL"></td>
-            </tr>
+    <div class="data table-responsive-md">
+        <table class="table table-hover align-middle text-center">
+            <thead class="text-center">
+                <tr>
+                    <th rowspan="2">Recambio</th>
+                    <th  colspan="2">Fase I</th>
+                    <th colspan="2">Fase II</th>
+                    <th style="width: 20%;" rowspan="2">Balance</th>
+                </tr>
+                <tr>
+                    <th>CONSENTRACIÓN</th>
+                    <th>INFUSIÓN</th>
+                    <th style="width: 20%">DRENAJE</th>
+                    <th>CUALIDAD</th>
+                </tr>
+            
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="0.0125">1.25%</option>
+                        <option value="0.025">2.50%</option>
+                        <option value="0.075">7.5%</option>
+                    </select></td>
+                    <td>2000 ml</td>
+                    <td><input class="form-control input" id="DRENAJE1" type="number" placeholder="0"></td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="1">Claro</option>
+                        <option value="2">Turbio</option>
+                    </select></td>
+                    <td id="TOTAL_BALANCE1"></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="0.0125">1.25%</option>
+                        <option value="0.025">2.50%</option>
+                        <option value="0.075">7.5%</option>
+                    </select></td>
+                    <td>2000 ml</td>
+                    <td><input class="form-control input" id="DRENAJE2" type="number" placeholder="0"></td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="1">Claro</option>
+                        <option value="2">Turbio</option>
+                    </select></td>
+                    <td id="TOTAL_BALANCE2"></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="0.0125">1.25%</option>
+                        <option value="0.025">2.50%</option>
+                        <option value="0.075">7.5%</option>
+                    </select></td>
+                    <td>2000 ml</td>
+                    <td><input class="form-control input" id="DRENAJE3" type="number" placeholder="0"></td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="1">Claro</option>
+                        <option value="2">Turbio</option>
+                    </select></td>
+                    <td id="TOTAL_BALANCE3"></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="0.0125">1.25%</option>
+                        <option value="0.025">2.50%</option>
+                        <option value="0.075">7.5%</option>
+                    </select></td>
+                    <td>2000 ml</td>
+                    <td><input class="form-control input" id="DRENAJE4" type="number" placeholder="0"></td>
+                    <td><select class="form-select input" name="" id="">
+                        <option value="" selected hidden>Elegir</option>
+                        <option value="1">Claro</option>
+                        <option value="2">Turbio</option>
+                    </select></td>
+                    <td id="TOTAL_BALANCE4"></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Total</td>
+                    <td></td>
+                    <td id="TOTAL_INFUSION "></td>
+                    <td id="TOTAL_DRENAJE"></td>
+                    <td></td>
+                    <td id="TOTAL_BALANCE_FINAL"></td>
+                </tr>
+            </tfoot>
         </table>
     </div>
-    <div id="buttons">
-        <button>Calcular</button>
-        <button>Descargar</button>
-        <button>Gráfico</button>
+    <div class="buttons">
+        <button id="calcular" disabled="disabled" class="btn btn-secondary">CALCULAR</button>
+        <button class="btn btn-secondary">Descargar</button>
+        <button class="btn btn-secondary">Gráfico</button>
     </div>
+<!-- </form> -->
 </body>
 </html>
