guardando para cambiar a apache

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <option value="2">Fresenius Medical Care</option>
                 </select></td>
                 <td>P/A</td>
-                <td style="display: flex;"><input class="form-control input presion" type="number" placeholder="Sistólica" required><span style="margin-right: 3%;">/</span><input class="form-control input presion" type="number" placeholder="Diastólica" required></td>
+                <td style="display: flex;"><input id="sistolica" class="form-control input presion" type="number" placeholder="Sistólica" required><span style="margin-right: 3%;">/</span><input id="diastolica" class="form-control input presion" type="number" placeholder="Diastólica" required></td>
             </tr>
         </table>
     </div>
