se agregaron controles, grafica y estilos

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <div class="buttons">
         <button id="calcular" disabled="disabled" class="btn btn-secondary">CALCULAR</button>
         <button id="detalle" class="btn btn-secondary">VER DETALLE</button>
+        <button id="reset" class="btn btn-secondary">LIMPIAR</button>
         <!-- <button class="btn btn-secondary">Gráfico</button> -->
     </div>
     <div class="window-resultados" id="window-resultados">
