--- a/index.html
+++ b/index.html
@@ -1,177 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style_index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-        crossorigin="anonymous">
-    </script>
-    <script src="./scripts/index.js"></script>
-    <title>Document</title>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
+
+<link type="text/css" rel="stylesheet" href="./styles/login.css">
+
+    <title>Inicia sesion</title>
+
 </head>
-<body style="--bs-body-bg: #a7c2eb;">
-    <h2 class="text-center">REPORTE DE BALANCE HIDRICO BALANCE PERITONIAL</h2>
-    <div class="info-paciente">
-        <table class="info-paciente-tabla">
-            <tr>
-                <td>PACIENTE</td>
-                <td><input id="nombre" class="form-control input" type="text" placeholder="Nombre Completo" required></td>
-                <td>FECHA</td>
-                <td><input class="form-control input fecha" value="" id="fecha" type="datetime-local" required></td>
-            </tr>
-            <tr>
-                <td>SISTEMA</td>
-                <td><select class="form-select input" name="Tipo Sistema" id="sistema">
-                    <option value="" selected hidden>Elija un sistema</option>
-                    <option value="1">Baxter</option>
-                    <option value="2">Fresenius Medical Care</option>
-                </select></td>
-                <td>P/A</td>
-                <td style="display: flex;"><input id="sistolica" class="form-control input presion" type="number" min="80" placeholder="Sistólica" required><span style="margin-right: 3%;">/</span><input id="diastolica" class="form-control input presion" type="number" min="60" placeholder="Diastólica" required></td>
-            </tr>
-        </table>
+
+<body>
+  
+  
+  <div class="login">
+    <h1 class="text-center">Bienvenido!</h1>
+
+
+    <form class="needs-validation">
+
+    <div class="form-group was-validated">
+    <label class="form-label" for="userr">Usuario</label>
+    <input class="form-control" type="text" id="userr" required>
+    <div class="invalid-feedback">
+      Por favor ingrese su dirección email
     </div>
-    <div class="data table-responsive-md">
-        <table class="table table-hover align-middle text-center">
-            <thead class="text-center">
-                <tr>
-                    <th rowspan="2">Recambio</th>
-                    <th  colspan="2">Fase I</th>
-                    <th colspan="2">Fase II</th>
-                    <th style="width: 20%;" rowspan="2">Balance</th>
-                </tr>
-                <tr>
-                    <th>CONSENTRACIÓN</th>
-                    <th>INFUSIÓN</th>
-                    <th style="width: 20%">DRENAJE</th>
-                    <th>CUALIDAD</th>
-                </tr>
-            
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td><select class="form-select input" name="" id="">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="0.0125">1.25%</option>
-                        <option value="0.025">2.50%</option>
-                        <option value="0.075">7.5%</option>
-                    </select></td>
-                    <td>2000 ml</td>
-                    <td style="display: flex;"><input class="form-control input drenaje" id="DRENAJE1" type="number" placeholder="0">
-                        <p style="margin: 5px 0 0 5px;">ml</p>
-                    </td>
-                    <td><select class="form-select input" name="" id="condicion1">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="1">Claro</option>
-                        <option value="2">Turbio</option>
-                    </select></td>
-                    <td id="TOTAL_BALANCE1"></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td><select class="form-select input" name="" id="">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="0.0125">1.25%</option>
-                        <option value="0.025">2.50%</option>
-                        <option value="0.075">7.5%</option>
-                    </select></td>
-                    <td>2000 ml</td>
-                    <td style="display: flex;"><input class="form-control input drenaje" id="DRENAJE2" type="number" placeholder="0">
-                        <p style="margin: 5px 0 0 5px;">ml</p>
-                    </td>
-                    <td><select class="form-select input" name="" id="condicion2">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="1">Claro</option>
-                        <option value="2">Turbio</option>
-                    </select></td>
-                    <td id="TOTAL_BALANCE2"></td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td><select class="form-select input" name="" id="">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="0.0125">1.25%</option>
-                        <option value="0.025">2.50%</option>
-                        <option value="0.075">7.5%</option>
-                    </select></td>
-                    <td>2000 ml</td>
-                    <td  style="display: flex;"><input class="form-control input drenaje" id="DRENAJE3" type="number" placeholder="0">
-                        <p style="margin: 5px 0 0 5px;">ml</p>
-                    </td>
-                    <td><select class="form-select input" name="" id="condicion3">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="1">Claro</option>
-                        <option value="2">Turbio</option>
-                    </select></td>
-                    <td id="TOTAL_BALANCE3"></td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td><select class="form-select input" name="" id="">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="0.0125">1.25%</option>
-                        <option value="0.025">2.50%</option>
-                        <option value="0.075">7.5%</option>
-                    </select></td>
-                    <td>2000 ml</td>
-                    <td  style="display: flex;"><input class="form-control input drenaje" id="DRENAJE4" type="number" placeholder="0">
-                        <p style="margin: 5px 0 0 5px;">ml</p>
-                    </td>
-                    <td><select class="form-select input condicion" name="" id="condicion4">
-                        <option value="" selected hidden>Elegir</option>
-                        <option value="1">Claro</option>
-                        <option value="2">Turbio</option>
-                    </select></td>
-                    <td id="TOTAL_BALANCE4"></td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td>Total</td>
-                    <td></td>
-                    <td id="TOTAL_INFUSION"></td>
-                    <td id="TOTAL_DRENAJE"></td>
-                    <td></td>
-                    <td id="TOTAL_BALANCE_FINAL"></td>
-                </tr>
-            </tfoot>
-        </table>
     </div>
-    <div class="buttons">
-        <button id="calcular" disabled="disabled" class="btn btn-secondary">CALCULAR</button>
-        <button id="detalle" class="btn btn-secondary">VER DETALLE</button>
-        <button id="reset" class="btn btn-secondary">LIMPIAR</button>
+
+    <div class="form-group was-validated">
+      <label class="form-label" for="passwordd">Contraseña</label>
+      <input class="form-control" type="password" id="passwordd" required>
+      <div class="invalid-feedback">
+        Por favor ingrese su contraseña
+      </div>
     </div>
-    <div class="window-resultados" id="window-resultados">
-        <div class="content">
-            <table>
-                <thead class="text-center">
-                    <th colspan="2"><h3>Análisis de Resultados del Balance Hídrico</h3></th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td style="width: 35%;"><p style="max-width: 250px; margin-right: 0;">Nombre del paciente:</p></td>
-                        <td style="width: 65%;"><p id="nombre_resultado">Cesar Iglesias</p></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><p id="resultadoBalance"></p></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><p id="resultadoPresion"></p></td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="btn-detalle">
-                <button class="btn btn-secondary" id="descargar">DESCARGAR</button>
-                <button class="btn btn-secondary" id="grafica">GRÁFICO</button>
-                <button class="btn btn-secondary" id="cerrar-detalle">CERRAR</button>
-            </div>
-        </div>
-    </div>
+
+    <input class="btn btn-success w-100" type="button" onclick="datosJSON()" value="Iniciar Sesion">
+    </form>
+  </div>
+
+
+  <script type="text/javascript" src="./scripts/validar.js"></script>
+
+
+    
 </body>
 </html>
