--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <label class="form-label" for="userr">Usuario</label>
     <input class="form-control" type="text" id="userr" required>
     <div class="invalid-feedback">
-      Por favor ingrese su dirección email
+      Por favor ingrese su usuario
     </div>
     </div>
 
