agregando funcionalidades de busqueda

--- a/citas.html
+++ b/citas.html
@@ -25,14 +25,14 @@
     <form class="form-selected" method="post" id="formulario">
 
 <div class="mb-2">
-    <label for="nombre" class="form-label">Cedula del paciente</label>
+    <label for="cedula" class="form-label">Cedula del paciente</label>
     <input type="text" class="form-control" id="cedula" name="cedula" placeholder="Escriba su cedula aqui">
 </div>
 <div class="mb-3">
     <label for="nombre" class="form-label">Nombre del paciente</label>
     <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Escriba su nombre aqui">
 </div>
-<br>
+
 <label for="esp" class="form-label">Especialidad</label>
 <select class="form-select" aria-label="Default select example" id="esp" name="esp">
     <option selected hidden>Seleccione la especialidad</option>
