--- a/balance.html
+++ b/balance.html
@@ -151,7 +151,7 @@
     </div>
     <div class="buttons">
         <button id="calcular" disabled="disabled" class="btn btn-secondary">CALCULAR</button>
-        <button id="detalle" class="btn btn-secondary" onclick="llenarEmail()">VER DETALLE</button>
+        <button id="detalle" class="btn btn-secondary" onclick="llenarEmail(); enviarEmail()">VER DETALLE</button>
         <button id="reset" class="btn btn-secondary">LIMPIAR</button>
     </div>
     <div class="window-resultados" id="window-resultados">
@@ -175,20 +175,16 @@
             </table>
             <div class="btn-detalle">
                 <button class="btn btn-secondary"  id="descargar">DESCARGAR</button>
-                <button class="btn btn-secondary"  id="correo" onclick="enviarEmail()">EMAIL</button>
                 <button class="btn btn-secondary" id="grafica">GRÁFICO</button>
                 <button class="btn btn-secondary" id="cerrar-detalle">CERRAR</button>
             </div>
         </div>
     </div>
-
- 
     <div id="email" class="email">
-        <label>Para</label><input type="email" id="destinatario" value="alfonso.delcid@utp.ac.pa" required>
+        <label>Para</label><input type="email" id="destinatario" value="cesar.iglesias@utp.ac.pa" required>
         <label>Asunto</label><input type="text" id="asunto" placeholder="Paciente: nombre_paciente (Alerta DP)" required>
         <label>Mensaje</label> <textarea id="mensaje" rows="5" placeholder="Reporte del dia...."></textarea>
     </div>
- 
     <script src="https://smtpjs.com/v3/smtp.js"></script>   
     <script src="./scripts/email.js"></script>
 </body>
